--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -78,7 +78,7 @@ jobs:
         id: build-image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: my-app-repo
+          ECR_REPOSITORY: nadeemtest
           IMAGE_TAG: latest
           #IMAGE_TAG: ${{ github.sha }}
         run: |
